--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Mexicolectivo</title>
   <base href="/">
+  <title>Mexicolectivo</title>
+
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+  <meta property="og:url" content="https://mexicolectivo.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Mexicolectivo" />
+  <meta property="og:description"
+    content="Mexicolectivo surge como una plataforma para recoger e intercambiar ideas, soluciones y diagnósticos, entre la ciudadanía y la sociedad civil organizada experta para incidir en la agenda pública." />
+  <meta property="og:image" content="https://static-assets-pando.s3.amazonaws.com/assets/150922_MEXICOLECTIVO_LOGO_RESPONSIVO_AZUL.png" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons" rel="stylesheet"> -->
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
@@ -13,7 +22,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JCHQ7304T0"></script>
@@ -31,6 +42,11 @@
 </body> -->
 
 <body>
+  <!-- Load Facebook SDK for JavaScript -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
+    nonce="9FNUI0zb"></script>
+
   <div class="app"></div>
 </body>
 
