--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     nonce="9FNUI0zb"></script>
 
   <!-- Inicio del código de Calixta Chat, pegar al final del body de la página  -->
-  <!-- <script>
+  <script>
     !function () {
       var w = window, d = document; function fx() {
         window.CalixtaChat.launch(
@@ -60,7 +60,7 @@
         "text/javascript", document.getElementsByTagName("head")[0].appendChild(s), w.
           attachEvent ? w.attachEvent("onload", fx) : w.addEventListener("load", fx, !1)
     }();
-  </script> -->
+  </script>
   <!-- Fin del código de Calixta Chat -->
 
   <div class="app"></div>
