--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
+</head>
+
+<!-- <body class="mat-typography">
+  <div class="app"></div>
+</body> -->
+
+<body>
+  <div class="app"></div>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JCHQ7304T0"></script>
@@ -37,20 +45,14 @@
 
     gtag('config', 'G-JCHQ7304T0', { send_page_view: false });
   </script>
-</head>
 
-<!-- <body class="mat-typography">
-  <div class="app"></div>
-</body> -->
-
-<body>
   <!-- Load Facebook SDK for JavaScript -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
     nonce="9FNUI0zb"></script>
 
   <!-- Inicio del código de Calixta Chat, pegar al final del body de la página  -->
-  <script>
+  <!-- <script>
     !function () {
       var w = window, d = document; function fx() {
         window.CalixtaChat.launch(
@@ -60,10 +62,8 @@
         "text/javascript", document.getElementsByTagName("head")[0].appendChild(s), w.
           attachEvent ? w.attachEvent("onload", fx) : w.addEventListener("load", fx, !1)
     }();
-  </script>
+  </script> -->
   <!-- Fin del código de Calixta Chat -->
-
-  <div class="app"></div>
 </body>
 
 </html>
