ajustes en posts

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
   <meta property="og:title" content="Mexicolectivo" />
   <meta property="og:description"
     content="Mexicolectivo surge como una plataforma para recoger e intercambiar ideas, soluciones y diagnósticos, entre la ciudadanía y la sociedad civil organizada experta para incidir en la agenda pública." />
-  <meta property="og:image"
-    content="https://static-assets-pando.s3.amazonaws.com/assets/150922_MEXICOLECTIVO_LOGO_RESPONSIVO_AZUL.png" />
+  <meta property="og:image" content="./assets/images/mexicolectivo-small-blue.png" />
   <meta name="facebook-domain-verification" content="275n9ylx6itosu9w5znutmc75ge38m" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
